WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275605
Assertion failure in adjustContentForPagination
https://bugs.webkit.org/show_bug.cgi?id=275605
Summary
Assertion failure in adjustContentForPagination
Antti Koivisto
Reported
2024-06-18 03:12:36 PDT
asserts
Attachments
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2024-06-18 03:12:52 PDT
rdar://124213853
Antti Koivisto
Comment 2
2024-06-18 04:33:04 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29928
EWS
Comment 3
2024-06-18 07:22:00 PDT
Committed
280118@main
(ef29e9a60de2): <
https://commits.webkit.org/280118@main
> Reviewed commits have been landed. Closing PR #29928 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug