Cherry-pick 280118@main (ef29e9a60de2). https://bugs.webkit.org/show_bug.cgi?id=275605

Assertion failure in adjustContentForPagination
    https://bugs.webkit.org/show_bug.cgi?id=275605
    rdar://124213853

    Reviewed by Alan Baradlay.

    * LayoutTests/fast/multicol/empty-line-assert-expected.txt: Added.
    * LayoutTests/fast/multicol/empty-line-assert.html: Added.
    * Source/WebCore/layout/formattingContexts/inline/invalidation/InlineInvalidation.cpp:
    (WebCore::Layout::leadingContentDisplayForLineIndex):

    The code assumed we can't have two subsequent root inline boxes in InlineDisplay. There
    are cases that generate empty lines where we get this structure.

    Canonical link: https://commits.webkit.org/280118@main

Canonical link: https://commits.webkit.org/274313.359@webkitglib/2.44